<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">ezMeal</string>
    
    <!-- Buttons' Label -->
    <string name="buttonBack">Back</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonModifyPassword">Modify Password</string>
    <string name="buttonMyTaste">My Taste</string>
    <string name="buttonOk">OK</string>
    <string name="buttonQuit">Quit</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonRegister">Sign Up</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonShake">SHAKE</string>
    
    <!-- Hint for EditText -->  
    <string name="hintUserName">Your ITSC</string>
    <string name="hintPassword">6&#8211;20 characters</string>
    
    <!-- Labels -->
    <string name="labelAt"> \@</string>
    <string name="labelBlacklist">Blacklist</string>
    <string name="labelBy">by</string>
    <string name="labelChangePassword">Change Password</string>
    <string name="labelComment">User Comments</string>
    <string name="labelConfirm">Confirm</string>
    <string name="labelConfirmationCode">Confirmation Code</string>
    <string name="labelConfirmPassword">Confirm Password</string>
    <string name="labelDollarSign">$</string>
    <string name="labelForgotPasswd"><u>Forgot your password?</u></string>
    <string name="labelForgotPasswdRemarks">By submitting your user name, a confirmation code will be sent to your HKUST mailbox. You can reset your password with this confirmation code.</string>
    <string name="labelHistory">History</string>
    <string name="labelMailAddrSuffix"> \@ ust.hk</string>
    <string name="labelMaxCommentContent">/140</string>
    <string name="labelMaxCommentTitle">/40</string>
    <string name="labelNew">New</string>
    <string name="labelNewPassword">New Password</string>
    <string name="labelNickName">Nickname</string>
    <string name="labelNoComments">No Comments on this dish.</string>
    <string name="labelOld">Old</string>
    <string name="labelPassword">Password</string>
    <string name="labelPersonalTaste">Personal Taste</string>
    <string name="labelPreferMeat">I prefer meat.</string>
    <string name="labelNoPreferSpicy">Either spicy or not is OK.</string>
    <string name="labelPreferSpicy">I prefer spicy food.</string>
    <string name="labelPreferNoSpicy">I prefer mild food.</string> 
    <string name="labelNoPreferMeat">Either meat or vegetables is OK.</string>
    <string name="labelPreferVege">I prefer vegetables.</string>
    <string name="labelRateIt">Rate It!</string>
    <string name="labelSaySomething">Say Something...</string>
    <string name="labelShakeRemarks">If you turn on this function, you are able to shake your device to randomly get a dish. Otherwise, you can press the &quot;SHAKE&quot; button in the main page to achieve this function.</string>
    <string name="labelShakeSettings">SHAKE by Shaking Device</string>
    <string name="labelSQMail">Your HKUST Email (SQmail) Account</string>
    <string name="labelTitle">Title</string>
    <string name="labelUserName">User Name</string>
    <string name="labelUserNameRemarks">An authentication email will be sent to your SQmail inbox. You need to finish the activation process. After a successful registration, you are able to login to ezMeal using your ITSC account.</string>
    <string name="labelUserNameRemarksTemp">At this stage (pre-alpha version), users directly register to ezMeal. Later, an authentication method will be adopted, verifying if your ITSC account is valid.</string>
    <string name="labelWriteComment">Write Comment</string>
    <string name="labelSearchName">Name contains: </string>
    <string name="labelSearchCanteen">Canteen: </string>
    <string name="labelSearchAvailableTime">Available Time: </string>
    <string name="labelSearchTaste">Taste Preference: </string>
	
    <!-- Link -->
    <string name="WebServiceURL">http://143.89.220.19/COMP3111H</string>
    
    <!-- Long -->
    <string name="uploadImage">There is no image for this dish now. Please help us to upload it. </string>
    
</resources>