<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/welcome"
    android:orientation="vertical">
    
    <!-- ezMeal Logo -->
    <ImageView
        android:id="@+id/imageLogo"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cake_logo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <!-- Login Result -->
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Small"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp" />
    <TextView
        android:id="@+id/labelLoginResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    </TextView>
    
    <!-- User Name -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="12dp">
        <TextView
            android:id="@+id/labelUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelUserName"
            android:paddingRight="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#fff">
        </TextView>
        <EditText
            android:id="@+id/editTextUserName"
            android:inputType="text"
            android:hint="@string/hintUserName"
            android:singleLine="true"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background"
            android:textSize="15dp">
        </EditText>
    </LinearLayout>
    
    <!-- Password -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelPassword"
            android:paddingLeft="9dp"
            android:paddingRight="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#fff">
        </TextView>
        <EditText
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@android:drawable/editbox_background"
            android:password="true">
        </EditText>
    </LinearLayout>
    
    <!-- Login / Sign-up Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonLogin">
        </Button>
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="17dp"
            android:text="@string/buttonRegister">
        </Button>
    </LinearLayout>
    
</LinearLayout>
