<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical"
    android:background="@drawable/orange_bg">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/labelSearchName"/>
	    <EditText
        android:id="@+id/editTextSearchName"
        android:inputType="text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:background="@android:drawable/editbox_background"/>
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/labelSearchCanteen"/>
	    <Spinner
	        android:id="@+id/spinnerCanteenSearch"
	        android:layout_width="270dp"
	        android:layout_height="wrap_content" 
	        android:layout_weight="1"/>
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/labelSearchAvailableTime"/>	    	
	    <Spinner
	        android:id="@+id/spinnerTimeSearch"
	        android:layout_width="270dp"
	        android:layout_height="wrap_content" 
	        android:layout_weight="1"/>

	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/labelSearchTaste"/>
	    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	        <CheckBox
	            android:id="@+id/checkBoxSpicy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:textColor="#fff"
		        android:textStyle="bold"
		        android:layout_weight="1"
	            android:text="Spicy" />

	        <CheckBox
	            android:id="@+id/checkBoxVegan"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:textColor="#fff"
		        android:textStyle="bold"
	            android:layout_weight="1"
	            android:text="Vegan" />

	        <CheckBox
	            android:id="@+id/checkBoxMeat"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
		        android:textColor="#fff"
		        android:textStyle="bold"
	            android:text="Meat" />	    
	    </LinearLayout>
	    <Button
	        android:id="@+id/buttonSubmitSearch"
	        android:layout_width="110dp"
	        android:layout_height="32dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="10dip"
	        android:layout_gravity="right"
	        android:background="@drawable/button_submit" />

	</LinearLayout>
</LinearLayout>
