<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/orange_bg"
    android:orientation="vertical" >
    
    <!-- Page Header -->
    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        layout="@layout/header" />

    <!-- Main Content -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center">

        <!-- User Name -->
        <TextView
            android:id="@+id/labelSettingsUserName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/labelUserName"
            android:textColor="#000"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextSettingsUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/labelSettingsUserName"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/labelSettingsUserName"
            android:background="@android:drawable/editbox_background"
            android:editable="false"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="#aaa" >
        </EditText>

        <!-- Nickname -->
        <TextView
            android:id="@+id/labelSettingsNickName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelSettingsUserName"
            android:layout_marginTop="30dp"
            android:text="@string/labelNickName"
            android:textColor="#000"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextSettingsNickName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/labelSettingsNickName"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/labelSettingsNickName"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"
            android:singleLine="true" />
        
        <!-- SHAKE Settings -->
        <TextView
            android:id="@+id/labelSettingsShake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelSettingsNickName"
            android:layout_marginTop="30dp"
            android:text="@string/labelShakeSettings"
            android:textColor="#000"
            android:textStyle="bold" />
        <ToggleButton
            android:id="@+id/toggleButtonSettingsShake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/labelSettingsShake"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/labelSettingsShakeRemarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textColor="#eee"
            android:layout_below="@id/labelSettingsShake"
            android:text="@string/labelShakeRemarks"/>

        <!-- Buttons -->
        <Button
            android:id="@+id/buttonSettingsSubmit"
            android:layout_width="110dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/labelSettingsShakeRemarks"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_submit" />

    </RelativeLayout>
    
</LinearLayout>
